demo/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: gitops-demo
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
