demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd
  namespace: gitops-demo
spec:
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
        santander: f1rst
    spec:
      serviceAccountName: httpd
      containers:
        - name: httpd
          resources:
            requests:
              cpu: 20m
              memory: 512Mi
            limits:
              cpu: 50m
              memory: 512Mi
          image: registry.redhat.io/rhel8/httpd-24@sha256:aa47279b61a85228bfe34e5e9bdd2628a6aee88f26f44d02e06345f4ed479b8e
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
          - mountPath: /opt/app-root/src
            name: app-root
      volumes:
      - name: app-root
        emptyDir: {}
