demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd
  namespace: gitops-demo
spec:
  selector:
    app: httpd
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
      name: http
