demo/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: httpd
  namespace: gitops-demo
spec:
  path: /
  to:
    kind: Service
    name: httpd
  port:
    targetPort: http
